fixed button overlap on book page for desktop view

--- a/src/Components/adminComponents/book_Admin_folder/BookAdmin.css
+++ b/src/Components/adminComponents/book_Admin_folder/BookAdmin.css
@@ -3,11 +3,13 @@
     padding-top: 20px;
 }
 .main-body-top {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    /* display: grid;
+    grid-template-columns: 1fr 1fr; */
+    /* display: block; */
     margin-top: 64px;
     padding-top: 40px;
-    height: 60%;
+    /* height: 60%; */
+    background-color: red;
 }
 
 .body-col-left {
@@ -27,6 +29,7 @@
 
 .body-col-right {
     height: 100%;
+    background-color: green;
 }
 
 .body-col-right h1 {
